--- a/src/estiloj.css
+++ b/src/estiloj.css
@@ -52,7 +52,7 @@ body, html {
 .title {
     flex-grow: 1;
     text-align: center;
-    font-size: 28px;
+    font-size: 42px;
     color: var(--accent-color);
     font-weight: bold;
 }
@@ -109,4 +109,68 @@ ul {
 }
 p {
     margin-bottom: 15px;
+}
+
+/* Navegadores */
+h1 {
+    color: #003399;
+    border-bottom: 2px solid #003399;
+    padding-bottom: 10px;
+}
+.browser-container {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 20px;
+    margin-top: 20px;
+}
+.browser-card {
+    border: 1px solid #024dd6;
+    border-radius: 8px;
+    padding: 15px;
+    width: calc(65% - 20px);
+    min-width: 300px;
+    background-color: rgba(35, 34, 34, 0.8); 
+    box-shadow: 0 2px 4px rgba(0,0.1,0,0.1);
+}
+.browser-header {
+    display: flex;
+    align-items: center;
+    margin-bottom: 15px;
+}
+.browser-icon {
+    width: 60px;
+    height: 60px;
+    margin-right: 15px;
+    background-color: rgba(249, 249, 249, 0.8); /*#eee;*/
+    border-radius: 10px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+.browser-name {
+    font-size: 1.2em;
+    font-weight: bold;
+    margin: 0;
+}
+.browser-info {
+    margin-top: 5px;
+    color: #666;
+}
+.browser-details {
+    margin-top: 15px;
+}
+.browser-details p {
+    margin: 8px 0;
+}
+.browser-details a {
+    color: #0066cc;
+    text-decoration: none;
+}
+.browser-details a:hover {
+    text-decoration: underline;
+}
+.stats {
+    margin-top: 5px;
+    font-style: italic;
+    color: #666;
 }
