--- a/src/estiloj.css
+++ b/src/estiloj.css
@@ -1,10 +1,20 @@
-body, html {
-    margin: 0;
-    padding: 0;
+html {
+    display: block;
+    margin: 0px;
     height: 100%;
     font-family: Arial, sans-serif;
-    padding: 10px;
+    padding: 0px;
     line-height: 1.6;
+    color: white;
+}
+body {
+    display: block;
+    margin: 0px;
+    font-family: Arial, sans-serif;
+    padding: 0px;
+    padding-left: 20px;
+    line-height: 1.6;
+    background-color:rgba(30, 30, 60, 0.7); 
     color: white;
 }
 .background {
@@ -16,7 +26,6 @@ body, html {
     background-image: url('../images/1352634.jpeg');
     background-size: cover;
     background-position: center;
-    opacity: 0.75;
     z-index: -1;
 }
 .container {
@@ -27,8 +36,7 @@ body, html {
 .header {
     color: yellow; /* white; */
     display: flex;
-    align-items: center;
-    padding: 10px;
+    align-items:center;
     height: 80px;
     width: 100%;
     background-color: var(--main-bg-color);
@@ -36,7 +44,17 @@ body, html {
     justify-content: center;
 }
 .footer {
-    color: yellow; /* white; */
+    position: fixed;
+    bottom: 0;
+    width: 100%;
+    height: 5%;
+    background-color: var(--main-bg-color);
+    color: yellow;
+    text-align: center;
+    padding: 10px 0;
+    /*
+    box-shadow: 0 -2px 5px rgba(0, 0, 0, 0.1); 
+    color: yellow;
     display: flex;
     align-items: center;
     height: 20px;
@@ -44,22 +62,36 @@ body, html {
     background-color: var(--main-bg-color);
     display: flex;
     justify-content: center;
+    */
 }
 .eu-flag {
     height: 60px;
     margin-right: 20px;
+    margin-top: 0px;
+    margin-bottom: 0px;
+    padding-bottom: 10px;
+}
+.flag {
+    font-size: 1.2em;
+    margin-right: 5px;
 }
 .title {
     flex-grow: 1;
     text-align: center;
-    font-size: 42px;
+    font-size: clamp(0.5rem, 5vw, 2rem);
     color: var(--accent-color);
     font-weight: bold;
+    margin-top: 0px;
+    margin-bottom: 0px;
 }
 .language-selector {
     margin-left: auto;
-    padding: 5px;
+    padding: 0px;
     background-color: var(--main-bg-color);
+}
+#language {
+    background-color:rgba(30, 30, 60, 0.7); 
+    color: white;
 }
 .content-area {
     display: flex;
@@ -67,9 +99,11 @@ body, html {
 }
 .sidebar {
     width: 120px;
+    height: 570px;
     background-color: #353434;
     padding: 10px;
     overflow-y: auto;
+    font-size: clamp(0.1rem, 5vw, 1rem);
 }
 .main-content {
     flex: 1;
@@ -99,7 +133,7 @@ iframe {
 
 /* inicio  */
 h2 {
-    color: #003399;
+    color: #06ddf5;
     border-bottom: 2px solid #003399;
     padding-bottom: 10px;
     margin-bottom: 20px;
@@ -113,7 +147,7 @@ p {
 
 /* Navegadores */
 h1 {
-    color: #003399;
+    color: #f50606;
     border-bottom: 2px solid #003399;
     padding-bottom: 10px;
 }
@@ -141,7 +175,7 @@ h1 {
     width: 60px;
     height: 60px;
     margin-right: 15px;
-    background-color: rgba(249, 249, 249, 0.8); /*#eee;*/
+    /*background-color: rgba(249, 249, 249, 0.8); /*#eee;*/
     border-radius: 10px;
     display: flex;
     align-items: center;
@@ -154,7 +188,7 @@ h1 {
 }
 .browser-info {
     margin-top: 5px;
-    color: #666;
+    color: #05f952;
 }
 .browser-details {
     margin-top: 15px;
@@ -172,5 +206,5 @@ h1 {
 .stats {
     margin-top: 5px;
     font-style: italic;
-    color: #666;
+    color: #f99b53;
 }
