--- a/src/estiloj.css
+++ b/src/estiloj.css
@@ -31,15 +31,15 @@ body {
 .container {
     display: flex;
     flex-direction: column;
-    height: 100vh; 
+    height: 100vh;
 }
 .header {
-    color: yellow; /* white; */
+/*    color: rgb(250, 250, 149); */
+    color: yellow;
     display: flex;
     align-items:center;
     height: 80px;
     width: 100%;
-    background-color: var(--main-bg-color);
     display: flex;
     justify-content: center;
 }
@@ -52,17 +52,6 @@ body {
     color: yellow;
     text-align: center;
     padding: 10px 0;
-    /*
-    box-shadow: 0 -2px 5px rgba(0, 0, 0, 0.1); 
-    color: yellow;
-    display: flex;
-    align-items: center;
-    height: 20px;
-    width: 100%;
-    background-color: var(--main-bg-color);
-    display: flex;
-    justify-content: center;
-    */
 }
 .eu-flag {
     height: 60px;
@@ -72,17 +61,19 @@ body {
     padding-bottom: 10px;
 }
 .flag {
-    font-size: 1.2em;
+    font-size: 1.4em;
     margin-right: 5px;
 }
 .title {
     flex-grow: 1;
     text-align: center;
     font-size: clamp(0.5rem, 5vw, 2rem);
-    color: var(--accent-color);
+    color: var(--accent-color); 
+/*    background-color:rgba(30, 30, 60, 0.7); */
     font-weight: bold;
     margin-top: 0px;
     margin-bottom: 0px;
+    display: inline-block; 
 }
 .language-selector {
     margin-left: auto;
@@ -207,4 +198,38 @@ h1 {
     margin-top: 5px;
     font-style: italic;
     color: #f99b53;
+}
+
+/* Alternativas pc */
+.features {
+    margin-top: 10px;
+}
+.features span {
+    display: inline-block;
+    background-color: #01519b; 
+    padding: 3px 8px;
+    border-radius: 12px;
+    font-size: 0.9em;
+    margin-right: 5px;
+    margin-bottom: 5px;
+}
+
+/* Alternativas moviles */
+.platforms {
+    margin-top: 10px;
+    display: flex;
+    gap: 10px;
+}
+.platform {
+/*    background-color: #f0f0f0; */
+    border-radius: 4px;
+    padding: 5px 10px;
+    font-size: 0.9em;
+    display: flex;
+    align-items: center;
+}
+.platform-icon {
+    width: 16px;
+    height: 16px;
+    margin-right: 5px;
 }
